--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 class="header__title">
           The Brighton Times
         </h1>
+        <div id="menu" class="menu"></div>
       </div>
     </header>
 
@@ -178,5 +179,6 @@
         </ul>
       </footer>
     </main>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
